# pysyncthru

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Pipfile  README.md  __init__.py  example.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  language-support-request.md
.github/workflows/: ci.yml
pysyncthru/: __init__.py  htmlparsers.py  language.py
pysyncthru/tests/: test_web.py
pysyncthru/tests/test_structure/: server_control.py  syncthru_mock_server.py
pysyncthru/tests/test_structure/Information/: supplies_status.htm
pysyncthru/tests/test_structure/state1/: .error.html  home.htm
pysyncthru/tests/test_structure/state1/Settings/Protocols/: general_protocols.htm
pysyncthru/tests/test_structure/state1/sws/app/information/counters/: counters.json
pysyncthru/tests/test_structure/state2/sws/app/information/home/: home.json
pysyncthru/tests/test_structure/sws/app/information/home/: home.json
pysyncthru/tests/web_raw/: web_state.py
